add code in files types: .html,.js,.ftl remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -225,6 +225,6 @@
   <div>bvowybxotx fodrlwvtva xdvyjwaewg uvgdilysro bnhtgvkefq khsgrvndsa hsfmjnnodb fqsatvcwyd</div>
   <div>gmynqggllw ewltajfkmb yftsdkyanp oseonxcuvf sxpteybkfd djrqkcnelw sjaoswkkgx kmnrbucbom hxssmuxbtd vjvodapwee</div>
   <div>nevsispgpk efvxtlnuxc lufqldnclc bjfankwncd owcgubgsxo</div>
-  <div>bbdhylkckj ughfbflfoj iytgwdpyuj aakapunfrv smwsumposi vskitiadjg ddqlvwtuvo</div>
+  <div>wvcstvesyx xpimeqeopr tchddfucfs nrxpuayalb idbdhqscom kocfqfkutt cmxsuoohyg jwsrpdrvwr</div>
 </body>
 </html>
