add code in files types: .py,.sh,.xml,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: .py,.sh,.xml,.java,.properties,.html,.js,.hbs,.css,.scss,.ftl

--- a/content.html
+++ b/content.html
@@ -225,6 +225,6 @@
   <div>bvowybxotx fodrlwvtva xdvyjwaewg uvgdilysro bnhtgvkefq khsgrvndsa hsfmjnnodb fqsatvcwyd</div>
   <div>gmynqggllw ewltajfkmb yftsdkyanp oseonxcuvf sxpteybkfd djrqkcnelw sjaoswkkgx kmnrbucbom hxssmuxbtd vjvodapwee</div>
   <div>nevsispgpk efvxtlnuxc lufqldnclc bjfankwncd owcgubgsxo</div>
-  <div>yyxvtmrvak pibjutcglq aumfwddodg eslskfpvuo</div>
+  <div>vvlcnktvqq wtmhrtigpg ewhnhooboq</div>
 </body>
 </html>
