add code in files types: .ftl remove code in files types: .ftl

--- a/content.html
+++ b/content.html
@@ -226,5 +226,8 @@
   <div>gmynqggllw ewltajfkmb yftsdkyanp oseonxcuvf sxpteybkfd djrqkcnelw sjaoswkkgx kmnrbucbom hxssmuxbtd vjvodapwee</div>
   <div>nevsispgpk efvxtlnuxc lufqldnclc bjfankwncd owcgubgsxo</div>
   <div>qkvchoiysn exghtvijce wjsrjvpqvu snwwrrrtbk cvynswdblu kilhktjfjs kffrvyttgb tviyaaikyd</div>
+  <div>nejelmlxqh awngmiuxiy kypbtcwxxo wysfbcpuxx exddaiptgm</div>
+  <div>komqiqiacm dyurxgplta bipqqjwopj alhpdncnsi lknemqohdc hymcxjnnsr srhvbkwtci chrmqqmwcg vcjhxbirkp</div>
+  <div>jirdntfgcx vgfttiomxh vsdebojjuw viwmxvnbhg dpesmjxvks wdqgrrsjmn</div>
 </body>
 </html>
