add code in files types: .java,.html,.hbs,.js,.ftl remove code in files types: .java,.hbs,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -229,5 +229,6 @@
   <div>nejelmlxqh awngmiuxiy kypbtcwxxo wysfbcpuxx exddaiptgm</div>
   <div>komqiqiacm dyurxgplta bipqqjwopj alhpdncnsi lknemqohdc hymcxjnnsr srhvbkwtci chrmqqmwcg vcjhxbirkp</div>
   <div>jirdntfgcx vgfttiomxh vsdebojjuw viwmxvnbhg dpesmjxvks wdqgrrsjmn</div>
+  <div>kavtkfovmv</div>
 </body>
 </html>
