add code in files types: .js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -230,5 +230,6 @@
   <div>komqiqiacm dyurxgplta bipqqjwopj alhpdncnsi lknemqohdc hymcxjnnsr srhvbkwtci chrmqqmwcg vcjhxbirkp</div>
   <div>jirdntfgcx vgfttiomxh vsdebojjuw viwmxvnbhg dpesmjxvks wdqgrrsjmn</div>
   <div>kavtkfovmv</div>
+  <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
 </body>
 </html>
