add code in files types: ,.py,.sh,.xml,.java,.sql,.git-id,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.py,.sh,.xml,.java,.git-id,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>sgmrjrlyou swqvlnyura uhsmgjacbl cccvvdkpvl rovpbhhkxv rlmluwnbqg tnywsmshui hilpdhjnra</div>
+  <div>hrdhclrivj btebuulvro hrnfmmyfsm eueqahjalc jisjquowym hvfwqaljvb</div>
 </body>
 </html>
