add code in files types: .java,.html,.js,.ftl remove code in files types: .java,.html,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>uyuyubxbyq dsvfuktark</div>
+  <div>mfowwakida rhvjuncjnj qkoppuqosp firgapcals gbrpxpnyhg mfgvlngwtl vyxndnlret</div>
 </body>
 </html>
