add code in files types: .css,.scss,.js,.ftl remove code in files types: .css,.scss,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>rndrbkwfjk cjtmfkthqq jhqfiestjk etqdicbplk fyhyraalwd nbkakmgvxy</div>
+  <div>ilmoxxxctt mxjboxhsnp aenotvxujq iuuseehibg mwhnlireub oenrsubchs uavtkbomfs</div>
 </body>
 </html>
