add code in files types: .sql,.java,.js,.ftl remove code in files types: .java,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>puohdrfudd qdlwssrrav pcgsjvwvjx pnpcvybcwd hwwqhckngg byrmukhreu igvlscvypl sgxtqgwmsn ypwvxmtcqw</div>
+  <div>bdhnucrngg wmaalsvnef</div>
 </body>
 </html>
