add code in files types: .java,.ftl remove code in files types: .java,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>pvhhpjhvoe wjlclebpsw lajdpksssh uxkjcsyvyp mecbfugcte uqqxenbmbd twrxcqygwb emkwphvtdr tyiocbtgig</div>
+  <div>barfvyjbyb cpwnckctme anpapnikoj ocgyqrhasu evocaypubj rjfjpklfao qivrwbumxt gpbyqxdtrc</div>
 </body>
 </html>
