add code in files types: ,.sql,.java,.js,.hbs,.html,.scss,.css,.ftl remove code in files types: ,.sql,.java,.js,.hbs,.html,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>uvpgsxrevq</div>
+  <div>mdqptvbpxh cmcsbvcmge jklosaqoyw smmcwenofs vjomgyitct kkuqutltfw clylktwavv ablpxvuijs kpuiklvibg ffluwtxoxq</div>
 </body>
 </html>
