add code in files types: .sh remove code in files types: .sh

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>tsvdahpldc thpljhlyik fwabvgthpd bakacpwnin rlthonoaja ndilxajcir</div>
+  <div>vlhjyayfrs xconfxulrm tnocqjvmwn jwkbbdmtfj ppgcpxrjjc esegwvtjmo</div>
 </body>
 </html>
