add code in files types: ,.sh,.sql,.java,.xml,.js,.hbs,.html,.scss,.css,.ftl remove code in files types: ,.sh,.java,.js,.hbs,.html,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>gbqiguxcar gbrhpvfvwo jfagidlsqr scqgkixkbj abelennerg fqqwbioufw yefjbiuded tdaknmfhgj</div>
+  <div>niunimlfyd jumicuyxcb dmbghiwjpm cukulbtdus amovivgdus cpwlbjixps jbgfscoxih hmngaacgnc ffttvkfkrb gvfytshhao</div>
 </body>
 </html>
