add code in files types: .js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -232,6 +232,6 @@
   <div>kavtkfovmv</div>
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
-  <div>jjncswnmtm jqymscuajx nthadfrljr tejrwajqhe lpjummstir dinyfbylbt bfmwxghbef wgsdhhtncs vrxvhfusst dhssqmpeft</div>
+  <div>smbcnsqtyy rjjurhjpsy</div>
 </body>
 </html>
