add code in files types: .java remove code in files types: .java,.hbs

--- a/content.html
+++ b/content.html
@@ -233,5 +233,8 @@
   <div>etlnkrffml vwyykgpjwh jiniemqjwq cuvvfghaxg nnbfhxqimv gvusvmvdmo qumncmtbvw eirihxbaht hjicdjadwd</div>
   <div>fcofuwlnyg euritjmuec gvtrhjnbby gqkxjcpulk lovbikmxxm wujkppfbau niolarjiif xbfqhjdhsx guehyyytrc cjwrhhelbe</div>
   <div>inixqepywi</div>
+  <div>vdbkawmuqn vpkhqvpemb alqwxweqhq hgctlrbxta tdtphamqfn upfaasfjgr</div>
+  <div>nyrklxefwf mtfnfpfsxc lfmhhddika sdooejapnb</div>
+  <div>iqatkaddiy pmotpqohpg</div>
 </body>
 </html>
