add code in files types: ,.sh,.json,.java,.sql,.git-id,.xml,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.sh,.json,.java,.git-id,.sql,.xml,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -236,5 +236,6 @@
   <div>vdbkawmuqn vpkhqvpemb alqwxweqhq hgctlrbxta tdtphamqfn upfaasfjgr</div>
   <div>nyrklxefwf mtfnfpfsxc lfmhhddika sdooejapnb</div>
   <div>iqatkaddiy pmotpqohpg</div>
+  <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
 </body>
 </html>
