add code in files types: .sh,.java,.sql,.git-id,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl,.xml remove code in files types: .sh,.java,.sql,.git-id,.js,.hbs,.scss,.css,.map,.ftl,.xml

--- a/content.html
+++ b/content.html
@@ -237,5 +237,6 @@
   <div>nyrklxefwf mtfnfpfsxc lfmhhddika sdooejapnb</div>
   <div>iqatkaddiy pmotpqohpg</div>
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
+  <div>eyypwlmsrd</div>
 </body>
 </html>
