add code in files types: ,.py,.sh,.json,.java,.git-id,.sql,.xml,.properties,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.py,.sh,.json,.java,.git-id,.sql,.xml,.properties,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -237,6 +237,6 @@
   <div>nyrklxefwf mtfnfpfsxc lfmhhddika sdooejapnb</div>
   <div>iqatkaddiy pmotpqohpg</div>
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
-  <div>eyypwlmsrd</div>
+  <div>nrlvadjlsx wjdhjujqil whkiyrhwth sxumqogpjg xutegsjanr kigxnatuxw dqxswjbhda jpckrdstwg bqcvplbvpj plujqiatcy</div>
 </body>
 </html>
