add code in files types: ,.sh,.java,.xml,.html,.js,.hbs,.scss,.css,.map,.ftl remove code in files types: ,.sh,.java,.xml,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -238,5 +238,6 @@
   <div>iqatkaddiy pmotpqohpg</div>
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
   <div>shhbvdluan kakgkgpkxs woibjvbhqj ecececqhgf ytruwtxqci judqhbjpfe nbdotyqmmf vppgllbchf</div>
+  <div>xbmqcllgme nyraqcwibx xelqvoejcs rfjypoqdwx wxnsvdsbfb jlrxgweqkv tcdwwadbob vxlqbhelpw reigygajrf</div>
 </body>
 </html>
