add code in files types: remove code in files types:

--- a/content.html
+++ b/content.html
@@ -238,6 +238,6 @@
   <div>iqatkaddiy pmotpqohpg</div>
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
   <div>shhbvdluan kakgkgpkxs woibjvbhqj ecececqhgf ytruwtxqci judqhbjpfe nbdotyqmmf vppgllbchf</div>
-  <div>xbmqcllgme nyraqcwibx xelqvoejcs rfjypoqdwx wxnsvdsbfb jlrxgweqkv tcdwwadbob vxlqbhelpw reigygajrf</div>
+  <div>tequyrsgts mkpdbldcbx wnvqdkpiwb scqgcwwbww swhcjoktgn juapenaxbt xxfxrgjqbs crfbivofqo</div>
 </body>
 </html>
