add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -239,6 +239,6 @@
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
   <div>shhbvdluan kakgkgpkxs woibjvbhqj ecececqhgf ytruwtxqci judqhbjpfe nbdotyqmmf vppgllbchf</div>
   <div>gbgpaiqavu sppndhigmy iyscudkkdl</div>
-  <div>scgngmxhse cshhqnolue ehttmkmsbt arpaaneddk beorpqocnk owcphkeiuy ikohyirnkf bjlacjjkgl</div>
+  <div>obdphcpmjm nxpxxghfsv aycxlxwwsl pfiguqfwrx mdrshisemg</div>
 </body>
 </html>
