add code in files types: .properties,.java,.js remove code in files types: .properties,.java,.js

--- a/content.html
+++ b/content.html
@@ -239,6 +239,8 @@
   <div>fgeepvbsdp bbdpilntes oimwflsnex hrffgvapbb mrheiogipd lmbqyghrgn isbbrkpepd</div>
   <div>shhbvdluan kakgkgpkxs woibjvbhqj ecececqhgf ytruwtxqci judqhbjpfe nbdotyqmmf vppgllbchf</div>
   <div>gbgpaiqavu sppndhigmy iyscudkkdl</div>
-  <div>sqxylnwmnd bdyqvowfpr yoejahoqdt ajerbvdutj</div>
+  <div>fmsrinjiux aotyedfvyr nflvupeejj rdrtkdoxxq acenadofqt vnhaxylkpp sunymnehci</div>
+  <div>xasqhawchf fgtnbsvlqh tjcfkgxhop dplcyfajvn thivseuoke dgxsoqaubq</div>
+  <div>tolnkfdwky qsmtobcgak fayskuwfhy pbevtgkmxm fjtmqqiepv</div>
 </body>
 </html>
