add code in files types: ,.java,.sql,.properties,.xml,.json,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.java,.properties,.json,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -241,6 +241,6 @@
   <div>gbgpaiqavu sppndhigmy iyscudkkdl</div>
   <div>fmsrinjiux aotyedfvyr nflvupeejj rdrtkdoxxq acenadofqt vnhaxylkpp sunymnehci</div>
   <div>xasqhawchf fgtnbsvlqh tjcfkgxhop dplcyfajvn thivseuoke dgxsoqaubq</div>
-  <div>tolnkfdwky qsmtobcgak fayskuwfhy pbevtgkmxm fjtmqqiepv</div>
+  <div>ljlilvhdlc oprddlkcgk veetiguchg gxrkitpquj</div>
 </body>
 </html>
