add code in files types: ,.sql,.java,.properties,.xml,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.java,.properties,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -242,5 +242,6 @@
   <div>fmsrinjiux aotyedfvyr nflvupeejj rdrtkdoxxq acenadofqt vnhaxylkpp sunymnehci</div>
   <div>xasqhawchf fgtnbsvlqh tjcfkgxhop dplcyfajvn thivseuoke dgxsoqaubq</div>
   <div>ljlilvhdlc oprddlkcgk veetiguchg gxrkitpquj</div>
+  <div>thptrocwwn pasvmhybpt wjuxbyrimq qsgkwjyjek yshwqtlrgb trbebuvqtx kbyukyyidk</div>
 </body>
 </html>
