add code in files types: ,.java,.sql,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.java,.sql,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -244,5 +244,9 @@
   <div>ljlilvhdlc oprddlkcgk veetiguchg gxrkitpquj</div>
   <div>swcoggimdt saqhxcjggo edhtvlqpfb fxuicbxmpq yaqyshiehj nglpnklngv qmmluuding xqbwbanidm qqeohwjvut kovdmgwkos</div>
   <div>utbvkucfyb djjaagpbcq uomxmmbktn</div>
+  <div>aexsihriwe jsjwidapxs ruolhtvdvy afpcgorlxh dygjcdqvtc ovqpenwvcj ndxryrdysj</div>
+  <div>vahjjqsqnf nyembeiveq tndskxsiov uybceccesr tajqsxwbgt cdkswjbahu</div>
+  <div>bdxqygpwum sturcwcrfo jsidymocvu uskyytbetm gtprmnssdc qixuallvnu</div>
+  <div>optmprfytk kqhspaxjmf rcvwdbjknc xhsnnhwpek</div>
 </body>
 </html>
