add code in files types: .sh,.java,.html,.hbs,.js,.scss,.css,.ftl remove code in files types: .java,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -248,6 +248,6 @@
   <div>vahjjqsqnf nyembeiveq tndskxsiov uybceccesr tajqsxwbgt cdkswjbahu</div>
   <div>bdxqygpwum sturcwcrfo jsidymocvu uskyytbetm gtprmnssdc qixuallvnu</div>
   <div>optmprfytk kqhspaxjmf rcvwdbjknc xhsnnhwpek</div>
-  <div>qpjxqvptmp aarfcawqka idwknayoae jwuanoqdbw</div>
+  <div>vihiwpivpk gspcxqywvo</div>
 </body>
 </html>
