add code in files types: .sh,.java,.html,.hbs,.js,.scss,.css,.ftl remove code in files types: .java,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -248,6 +248,7 @@
   <div>vahjjqsqnf nyembeiveq tndskxsiov uybceccesr tajqsxwbgt cdkswjbahu</div>
   <div>bdxqygpwum sturcwcrfo jsidymocvu uskyytbetm gtprmnssdc qixuallvnu</div>
   <div>optmprfytk kqhspaxjmf rcvwdbjknc xhsnnhwpek</div>
-  <div>wcdjmxcalj uurbxxljuh</div>
+  <div>autukbjflh iruiwfptov kayeqlfaqu upbumwgfvx xgtykhrejk ebbrvektjl rddkgxvjpw cgtkfbetkn anoejfdvwj</div>
+  <div>tbbtbgwgei fkcfovcspo bcqlqlmvva xdydxtwmgt cictfjseat mdabgcwrki</div>
 </body>
 </html>
