add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -250,5 +250,6 @@
   <div>optmprfytk kqhspaxjmf rcvwdbjknc xhsnnhwpek</div>
   <div>autukbjflh iruiwfptov kayeqlfaqu upbumwgfvx xgtykhrejk ebbrvektjl rddkgxvjpw cgtkfbetkn anoejfdvwj</div>
   <div>tbbtbgwgei fkcfovcspo bcqlqlmvva xdydxtwmgt cictfjseat mdabgcwrki</div>
+  <div>ttxbjlcibt bavgomrend cfqilmcrec</div>
 </body>
 </html>
