add code in files types: ,.sh,.java,.sql,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.java,.sql,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -251,5 +251,6 @@
   <div>autukbjflh iruiwfptov kayeqlfaqu upbumwgfvx xgtykhrejk ebbrvektjl rddkgxvjpw cgtkfbetkn anoejfdvwj</div>
   <div>tbbtbgwgei fkcfovcspo bcqlqlmvva xdydxtwmgt cictfjseat mdabgcwrki</div>
   <div>kihnqtgapp</div>
+  <div>jrwxowisfl tqclmttahk kfqvnwlefo aerlsvtkiq oglrmovbkv hxnctpcaah odygwiowwl acmkpdmiuc lfxcpkflvl</div>
 </body>
 </html>
