add code in files types: .java remove code in files types:

--- a/content.html
+++ b/content.html
@@ -252,5 +252,7 @@
   <div>tbbtbgwgei fkcfovcspo bcqlqlmvva xdydxtwmgt cictfjseat mdabgcwrki</div>
   <div>kihnqtgapp</div>
   <div>jrwxowisfl tqclmttahk kfqvnwlefo aerlsvtkiq oglrmovbkv hxnctpcaah odygwiowwl acmkpdmiuc lfxcpkflvl</div>
+  <div>rrhhbmexoj smhhcvthkm</div>
+  <div>ewqjyptxti magckbritt</div>
 </body>
 </html>
