add code in files types: .java,.ftl remove code in files types: .java,.ftl

--- a/content.html
+++ b/content.html
@@ -253,6 +253,6 @@
   <div>kihnqtgapp</div>
   <div>jrwxowisfl tqclmttahk kfqvnwlefo aerlsvtkiq oglrmovbkv hxnctpcaah odygwiowwl acmkpdmiuc lfxcpkflvl</div>
   <div>rrhhbmexoj smhhcvthkm</div>
-  <div>tsxhwtdohl htqwwincif qalshprnrk jiutftgtnw trrhvapcic dxshgnfyat lqxkipushm kmanjsmapy qvnbvgydwa voybjboffy</div>
+  <div>oempnyjwtl ccfnhawqmj jjdcejxogq oimboaoaec guqvmbioty dfppbxpyci niojruxglm</div>
 </body>
 </html>
