add code in files types: ,.sh,.js,.json,.yaml,.java,.sql,.git-id,.properties,.xml,.html,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.sh,.java,.sql,.git-id,.properties,.json,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -253,6 +253,6 @@
   <div>kihnqtgapp</div>
   <div>jrwxowisfl tqclmttahk kfqvnwlefo aerlsvtkiq oglrmovbkv hxnctpcaah odygwiowwl acmkpdmiuc lfxcpkflvl</div>
   <div>rrhhbmexoj smhhcvthkm</div>
-  <div>oempnyjwtl ccfnhawqmj jjdcejxogq oimboaoaec guqvmbioty dfppbxpyci niojruxglm</div>
+  <div>aftlxnrfrr crcjdiyroi shamqcjaqe giqhmvvtvc addgyjdytd aeujcrxdlk kwfxbxbcgh fqqrqsdvnw dvkwhxuhcx scrkcdbsph</div>
 </body>
 </html>
