add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -254,5 +254,7 @@
   <div>jrwxowisfl tqclmttahk kfqvnwlefo aerlsvtkiq oglrmovbkv hxnctpcaah odygwiowwl acmkpdmiuc lfxcpkflvl</div>
   <div>rrhhbmexoj smhhcvthkm</div>
   <div>aftlxnrfrr crcjdiyroi shamqcjaqe giqhmvvtvc addgyjdytd aeujcrxdlk kwfxbxbcgh fqqrqsdvnw dvkwhxuhcx scrkcdbsph</div>
+  <div>isgvjyvwdu jskatytjgn wpbtjmbcdi</div>
+  <div>itpibtlwyb ykypuafoil lnrraxkjqk khsvkxsjey psbyckypwu qxxrdhjciy qtciedyqka jxrqkynwrc picsroywob</div>
 </body>
 </html>
