add code in files types: ,.conf,.properties,.java,.html,.js,.hbs,.ftl remove code in files types: ,.properties,.java,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -256,5 +256,6 @@
   <div>aftlxnrfrr crcjdiyroi shamqcjaqe giqhmvvtvc addgyjdytd aeujcrxdlk kwfxbxbcgh fqqrqsdvnw dvkwhxuhcx scrkcdbsph</div>
   <div>isgvjyvwdu jskatytjgn wpbtjmbcdi</div>
   <div>itpibtlwyb ykypuafoil lnrraxkjqk khsvkxsjey psbyckypwu qxxrdhjciy qtciedyqka jxrqkynwrc picsroywob</div>
+  <div>pavmnkgsnp cxgdathvmx qchsouppee nyuvcuoncp</div>
 </body>
 </html>
