add code in files types: ,.avsc,.conf,.java,.properties,.html,.js,.hbs,.ftl remove code in files types: ,.avsc,.java,.properties,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -257,5 +257,6 @@
   <div>isgvjyvwdu jskatytjgn wpbtjmbcdi</div>
   <div>itpibtlwyb ykypuafoil lnrraxkjqk khsvkxsjey psbyckypwu qxxrdhjciy qtciedyqka jxrqkynwrc picsroywob</div>
   <div>pavmnkgsnp cxgdathvmx qchsouppee nyuvcuoncp</div>
+  <div>xbmbrnrpvi eesqnqmlek</div>
 </body>
 </html>
