add code in files types: .hbs,.js,.scss,.css remove code in files types: .hbs,.css,.map,.scss,.js

--- a/content.html
+++ b/content.html
@@ -258,5 +258,6 @@
   <div>itpibtlwyb ykypuafoil lnrraxkjqk khsvkxsjey psbyckypwu qxxrdhjciy qtciedyqka jxrqkynwrc picsroywob</div>
   <div>pavmnkgsnp cxgdathvmx qchsouppee nyuvcuoncp</div>
   <div>xbmbrnrpvi eesqnqmlek</div>
+  <div>kdtnkntagm ipoqfkqmfa</div>
 </body>
 </html>
