add code in files types: ,.avsc,.conf,.sql,.java,.properties,.html,.js,.hbs,.css,.ftl remove code in files types: ,.avsc,.java,.properties,.js,.hbs,.ftl

--- a/content.html
+++ b/content.html
@@ -259,5 +259,6 @@
   <div>pavmnkgsnp cxgdathvmx qchsouppee nyuvcuoncp</div>
   <div>xbmbrnrpvi eesqnqmlek</div>
   <div>kdtnkntagm ipoqfkqmfa</div>
+  <div>ueadnomsev cnsvrfkhor tkiawtoqcf yjcjrbrfjc owvlphyyjm shgcdijjtk vpjakrlfrc olfuuhwosv dcaelnmdin</div>
 </body>
 </html>
