add code in files types: .js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -260,5 +260,7 @@
   <div>xbmbrnrpvi eesqnqmlek</div>
   <div>kdtnkntagm ipoqfkqmfa</div>
   <div>ueadnomsev cnsvrfkhor tkiawtoqcf yjcjrbrfjc owvlphyyjm shgcdijjtk vpjakrlfrc olfuuhwosv dcaelnmdin</div>
+  <div>qpwjluvmop kflvfrdpwp urqhpeheaw ypuauevera iqjuvesspq emefuplgye wjvsvdcley wkcgxmsmfm</div>
+  <div>prvytrhcug suosvurcxh advyclmcbk myjcxkpunh shkrxgybqi ibpsiawxma yefslvspnq</div>
 </body>
 </html>
