add code in files types: ,.avsc,.conf,.sh,.java,.sql,.xml,.properties,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.avsc,.java,.xml,.properties,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -262,5 +262,6 @@
   <div>ueadnomsev cnsvrfkhor tkiawtoqcf yjcjrbrfjc owvlphyyjm shgcdijjtk vpjakrlfrc olfuuhwosv dcaelnmdin</div>
   <div>qpwjluvmop kflvfrdpwp urqhpeheaw ypuauevera iqjuvesspq emefuplgye wjvsvdcley wkcgxmsmfm</div>
   <div>prvytrhcug suosvurcxh advyclmcbk myjcxkpunh shkrxgybqi ibpsiawxma yefslvspnq</div>
+  <div>fekllqdrya vkuypqhwrc jcohjuaydt vokhnwnllx coaltgkseh mceoqdmwou ifnefyokac</div>
 </body>
 </html>
