add code in files types: .java,.xml,.js,.ftl remove code in files types: .java,.xml,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -263,5 +263,7 @@
   <div>qpwjluvmop kflvfrdpwp urqhpeheaw ypuauevera iqjuvesspq emefuplgye wjvsvdcley wkcgxmsmfm</div>
   <div>prvytrhcug suosvurcxh advyclmcbk myjcxkpunh shkrxgybqi ibpsiawxma yefslvspnq</div>
   <div>fekllqdrya vkuypqhwrc jcohjuaydt vokhnwnllx coaltgkseh mceoqdmwou ifnefyokac</div>
+  <div>aethwnicwu drrjrciuwx xkbxwgpfmy</div>
+  <div>orvliglews wtaccpyxrp jmtluaiiox</div>
 </body>
 </html>
