add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -265,5 +265,6 @@
   <div>fekllqdrya vkuypqhwrc jcohjuaydt vokhnwnllx coaltgkseh mceoqdmwou ifnefyokac</div>
   <div>aethwnicwu drrjrciuwx xkbxwgpfmy</div>
   <div>orvliglews wtaccpyxrp jmtluaiiox</div>
+  <div>vfexvgwgxt sukohphjys gqfpwclhvl phvchjreno ruauwcambx eqjkpfkkga kociohtprj tpmblqqiwg wsehahvxdx</div>
 </body>
 </html>
