add code in files types: .css,.scss,.js,.ftl remove code in files types: .css,.scss,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -266,5 +266,6 @@
   <div>aethwnicwu drrjrciuwx xkbxwgpfmy</div>
   <div>orvliglews wtaccpyxrp jmtluaiiox</div>
   <div>vfexvgwgxt sukohphjys gqfpwclhvl phvchjreno ruauwcambx eqjkpfkkga kociohtprj tpmblqqiwg wsehahvxdx</div>
+  <div>goaivwawux upqincnxdp yhqtgdvhce prdgifsrgc</div>
 </body>
 </html>
