add code in files types: ,.avsc,.conf,.sh,.js,.json,.yaml,.java,.sql,.xml,.properties,.html,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.avsc,.java,.json,.sql,.xml,.properties,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -267,5 +267,6 @@
   <div>orvliglews wtaccpyxrp jmtluaiiox</div>
   <div>vfexvgwgxt sukohphjys gqfpwclhvl phvchjreno ruauwcambx eqjkpfkkga kociohtprj tpmblqqiwg wsehahvxdx</div>
   <div>goaivwawux upqincnxdp yhqtgdvhce prdgifsrgc</div>
+  <div>eobomjuycc wkxgfsumtr bqhspfebep jfkcihgqes tuttysnulg iwditqfnda jyunryrpbj nsshhuybkf hgcucowmpw qhidfmdbfd</div>
 </body>
 </html>
