add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -267,6 +267,6 @@
   <div>orvliglews wtaccpyxrp jmtluaiiox</div>
   <div>vfexvgwgxt sukohphjys gqfpwclhvl phvchjreno ruauwcambx eqjkpfkkga kociohtprj tpmblqqiwg wsehahvxdx</div>
   <div>goaivwawux upqincnxdp yhqtgdvhce prdgifsrgc</div>
-  <div>yctkwokigs dcfbfvykjo</div>
+  <div>fabweorlut vgocvoyioj nlvkiflahw omugwcvhqw bpjuhwmifi wroumktgat yxsdsnklyn</div>
 </body>
 </html>
