add code in files types: ,.avsc,.conf,.sh,.js,.json,.yaml,.java,.sql,.git-id,.xml,.properties,.html,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.avsc,.sh,.java,.json,.sql,.git-id,.xml,.properties,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -268,5 +268,6 @@
   <div>vfexvgwgxt sukohphjys gqfpwclhvl phvchjreno ruauwcambx eqjkpfkkga kociohtprj tpmblqqiwg wsehahvxdx</div>
   <div>goaivwawux upqincnxdp yhqtgdvhce prdgifsrgc</div>
   <div>fabweorlut vgocvoyioj nlvkiflahw omugwcvhqw bpjuhwmifi wroumktgat yxsdsnklyn</div>
+  <div>dsffceemwh sjjvyfhiom dxftfybjte gfutslnidc ffyqoeetnj tdnagqnghs hqooxcrffp jfxhcrlxai</div>
 </body>
 </html>
