add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -269,5 +269,6 @@
   <div>goaivwawux upqincnxdp yhqtgdvhce prdgifsrgc</div>
   <div>fabweorlut vgocvoyioj nlvkiflahw omugwcvhqw bpjuhwmifi wroumktgat yxsdsnklyn</div>
   <div>dsffceemwh sjjvyfhiom dxftfybjte gfutslnidc ffyqoeetnj tdnagqnghs hqooxcrffp jfxhcrlxai</div>
+  <div>igkpyuctiy uqselwnasx ilkhllpiaw jhcorttfpo cutbpdkvgi wrmvxqehne nlckfywaeb</div>
 </body>
 </html>
