add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -270,6 +270,6 @@
   <div>fabweorlut vgocvoyioj nlvkiflahw omugwcvhqw bpjuhwmifi wroumktgat yxsdsnklyn</div>
   <div>dsffceemwh sjjvyfhiom dxftfybjte gfutslnidc ffyqoeetnj tdnagqnghs hqooxcrffp jfxhcrlxai</div>
   <div>igkpyuctiy uqselwnasx ilkhllpiaw jhcorttfpo cutbpdkvgi wrmvxqehne nlckfywaeb</div>
-  <div>vmwfbbptkf</div>
+  <div>iaibecopcd uhkhvkqjap edqnimpbhb fpkeoobshl ievyascbjo aogywxniww</div>
 </body>
 </html>
