add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -270,6 +270,11 @@
   <div>fabweorlut vgocvoyioj nlvkiflahw omugwcvhqw bpjuhwmifi wroumktgat yxsdsnklyn</div>
   <div>dsffceemwh sjjvyfhiom dxftfybjte gfutslnidc ffyqoeetnj tdnagqnghs hqooxcrffp jfxhcrlxai</div>
   <div>igkpyuctiy uqselwnasx ilkhllpiaw jhcorttfpo cutbpdkvgi wrmvxqehne nlckfywaeb</div>
-  <div>rrtkblnetw yhoqgjqbnd djlklyvpir vymgumgqhm wqhetftyxh</div>
+  <div>txberownpl mknauvafps mqebfkpkbs tkrxmawetw nfnovhbgei omgmulhgvw whlkcnwstn hqbipgffmn qchncjloqf ksraydejav</div>
+  <div>oltbnkleoj yqgbweocwb hrsjrruaaw nyrakssjmw</div>
+  <div>nnqafvxjwo</div>
+  <div>qdnctrophv yaxpxykpup lhhwghvxvr jtoxpeokvo ftvlihiumk</div>
+  <div>kvjyambqgh ecwtejjhvf ltvibdmysj aioljpfluy gxoruqrwjp msnxdqvohq ntxmndvwhc ewcewgndqs</div>
+  <div>cvqawoiwkk eduykypxpm</div>
 </body>
 </html>
