add code in files types: ,.avsc,.sh,.java,.html,.js,.hbs,.scss,.css,.map,.svg,.ftl remove code in files types: ,.avsc,.sh,.java,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -275,6 +275,6 @@
   <div>nnqafvxjwo</div>
   <div>qdnctrophv yaxpxykpup lhhwghvxvr jtoxpeokvo ftvlihiumk</div>
   <div>kvjyambqgh ecwtejjhvf ltvibdmysj aioljpfluy gxoruqrwjp msnxdqvohq ntxmndvwhc ewcewgndqs</div>
-  <div>ujgkvgjkhd esokcogeym vpoiwpwdno vmrsxosxsc trbuyhpqao wpfukujjug</div>
+  <div>unsdmkbosx cbmbkrccbw pjerlemcbh</div>
 </body>
 </html>
