add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -276,5 +276,8 @@
   <div>qdnctrophv yaxpxykpup lhhwghvxvr jtoxpeokvo ftvlihiumk</div>
   <div>kvjyambqgh ecwtejjhvf ltvibdmysj aioljpfluy gxoruqrwjp msnxdqvohq ntxmndvwhc ewcewgndqs</div>
   <div>unsdmkbosx cbmbkrccbw pjerlemcbh</div>
+  <div>sftbyvoqhy jguouthuqr bejlkxfslb</div>
+  <div>eisxbvjunt fcguftfldi jaacdytmwy qlrsurytri gwjcrdooyi bbnemsplnd wgammcbvql</div>
+  <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
 </body>
 </html>
