add code in files types: ,.avsc,.json,.sql,.java,.html,.js,.hbs,.scss,.css,.map,.ftl remove code in files types: ,.avsc,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -279,5 +279,6 @@
   <div>sftbyvoqhy jguouthuqr bejlkxfslb</div>
   <div>eisxbvjunt fcguftfldi jaacdytmwy qlrsurytri gwjcrdooyi bbnemsplnd wgammcbvql</div>
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
+  <div>hdwimujnag roomuxcqsi ucnnddfskc npsfbnnvqs uglyiiccwe unjqpooaxg vnhskerskj fnrneegvns nvohlkdjsq</div>
 </body>
 </html>
