add code in files types: ,.json,.sql,.java,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sql,.java,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -280,5 +280,6 @@
   <div>eisxbvjunt fcguftfldi jaacdytmwy qlrsurytri gwjcrdooyi bbnemsplnd wgammcbvql</div>
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
+  <div>nhnnblhmhr</div>
 </body>
 </html>
