add code in files types: .java,.ftl remove code in files types: .ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>ogowdnjbfl brotmddbus</div>
+  <div>fxvjduxqvi ljgqfmtgls gkrywiwyrs whbhrxhgxk nrkukkqlqf dwkroooxny xcjrvbglpx nhvhbpkcgr vxeiwfdvrg</div>
 </body>
 </html>
