add code in files types: ,.java,.xml,.html,.hbs,.js,.scss,.css,.ftl remove code in files types: ,.java,.xml,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>yjuhrsawpp nvoxhidoph kabnaqetgf pxsjneqtmc ubukquaikt dvjiqiubyb mwmgbvpdxm</div>
+  <div>bcdwhjchqc ftdtlemwyv wlkybvdigj uqgmqkelgs</div>
 </body>
 </html>
