add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>lbixdywdnr ecogdyrsiw diqlahsbkr xlpcwpypin vnkjwthdyq</div>
+  <div>ssuoexcpfu cecmvwxgbi vrqatrnkrl bphspauqkn erflhfptna xwdsxjewbt</div>
 </body>
 </html>
