add code in files types: .avsc,.sql,.java,.properties,.xml,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: .avsc,.log,.sql,.java,.properties,.xml,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>rahhjdjslo wxgytujcuu fcksywmvfi xjbvokkwei fcdhnckxjf</div>
+  <div>fkamunycws ujidutojwb nuaumqjhej awqdeyfjrc aeepaehphl gebgvmvwxw mmyswtoeyi</div>
 </body>
 </html>
