add code in files types: .avsc,,.sh,.painless,.sql,.java,.properties,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: .avsc,.sh,.sql,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>bhdcfjrjdr akcuadfthn jjrtcndltq ravxrvpcls vwvjwiotoc jeurwyietw wxchxqhijj yfptvuhtth wliawksjrs psphctactw</div>
+  <div>onljqggdfm hehmcqiihd aiasreqtqb wdohiairuy njtclxkjwx ieuykmgeyo qntpvptgdp</div>
 </body>
 </html>
