add code in files types: .sql,.java,.ftl remove code in files types: .java,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>bjwuvoghih hmiclkmtwi ajnwhkusfh codqrbcvtx mhprotwmfe iqkxekpcou qesnwxhnwy</div>
+  <div>cwyufrnmsi icbicxcnpt dmxtuygadt acsdclspda rmdwlqmdtr irojymeadl</div>
 </body>
 </html>
