add code in files types: ,.xml,.avsc,.py,.sh,.java,.sql,.properties,.DocValuesFormat,.PostingsFormat,.js,.hbs,.html,.scss,.css,.ftl,.git-id remove code in files types: ,.xml,.avsc,.sh,.java,.sql,.properties,.js,.hbs,.html,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>wrdbmgqnjb gyklkerqhr gvysscrqwh rligscnsnj hqclbjprbn nohbbonguj rmpblbjjuh</div>
+  <div>ygiaaexsbq rnbhfrgtnh jludvabqoo nsefnswuvp</div>
 </body>
 </html>
