add code in files types: .java,.js,.ftl remove code in files types: .java,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>phncqfltrc</div>
+  <div>epbykkpibk ejtxropwly jelruvsybl xnbeslitxw wwnccujblu</div>
 </body>
 </html>
