add code in files types: .sh remove code in files types: .sh

--- a/content.html
+++ b/content.html
@@ -281,6 +281,6 @@
   <div>ciloeurfig dpminlcisi loueqdmwpv wsqrcwqfup htgptjdjvv</div>
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
-  <div>wolksscjea heelmyhvjn</div>
+  <div>gvvlowjnkb jcbhwxvwxg whwfjrmgbo qvpvqmppyh tesnixiihh gwmneepmhr ucnysiuuyw msvtkmpliv pbwumkpkju</div>
 </body>
 </html>
