add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -282,5 +282,10 @@
   <div>isivsohxei tsgojfojvg mwhcdsrrgr uishebwjvk uoartlmtlp iwnekfxdlr fnlqkyqvpk mcmhmkigse eesihddsvw</div>
   <div>nhnnblhmhr</div>
   <div>rtxpotwtsn yikhciggcx</div>
+  <div>wrcqsyoyev waygkqrtdg uougfufbxg fxstuincub axhlhcckhl scorlsmjqb pydxhynhpb fwlnsuxdpb</div>
+  <div>hmysjkjtph pmmstunrbf dafrqyqaay ftxkjplysr ymhgdxhctj rqmsrwwsqb</div>
+  <div>buxdkcjooj iivdoilmwp bssjqkhckm nnrtnbqwps abordeythw vjccrtcloy bmgnoyyyac ucrofipviq hluvdsecft fvcwnefsru</div>
+  <div>njwlxomnlf lvxejewhus uslhwhnjak stcrklcpqv</div>
+  <div>vnaesqmexn tlmdpclsyi uexvuuufly kwwaxfcfra dmafevgexh pxidhasjwf ixamcdoowg giaufupfnf</div>
 </body>
 </html>
