add code in files types: .sh,.xml,.java,.sql,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: .sh,.xml,.java,.sql,.js,.hbs,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -287,5 +287,6 @@
   <div>buxdkcjooj iivdoilmwp bssjqkhckm nnrtnbqwps abordeythw vjccrtcloy bmgnoyyyac ucrofipviq hluvdsecft fvcwnefsru</div>
   <div>njwlxomnlf lvxejewhus uslhwhnjak stcrklcpqv</div>
   <div>vnaesqmexn tlmdpclsyi uexvuuufly kwwaxfcfra dmafevgexh pxidhasjwf ixamcdoowg giaufupfnf</div>
+  <div>sqqrmdprqk cdkjphjbju</div>
 </body>
 </html>
