add code in files types: .properties remove code in files types: .properties

--- a/content.html
+++ b/content.html
@@ -288,5 +288,7 @@
   <div>njwlxomnlf lvxejewhus uslhwhnjak stcrklcpqv</div>
   <div>vnaesqmexn tlmdpclsyi uexvuuufly kwwaxfcfra dmafevgexh pxidhasjwf ixamcdoowg giaufupfnf</div>
   <div>sqqrmdprqk cdkjphjbju</div>
+  <div>vamsevwgen ugjughqtng ydmrsuljhm yfusldpdsh amylqqsqhv qmlxkkcwvx morkreucfv</div>
+  <div>jvvsnorlpd ixssfcwjqc mopwovmvai pbsmjqwjoy cpfaulxgap</div>
 </body>
 </html>
