add code in files types: ,.groovy,.sh,.xml,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: .sh,.groovy,.xml,.java,.properties,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -291,5 +291,6 @@
   <div>vamsevwgen ugjughqtng ydmrsuljhm yfusldpdsh amylqqsqhv qmlxkkcwvx morkreucfv</div>
   <div>jvvsnorlpd ixssfcwjqc mopwovmvai pbsmjqwjoy cpfaulxgap</div>
   <div>ldnhdqrljl prbhmlnffa qrdtfeyssu crttkridig</div>
+  <div>oselshyokd yexdfwvioo aoregtekkx</div>
 </body>
 </html>
