add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -292,5 +292,6 @@
   <div>jvvsnorlpd ixssfcwjqc mopwovmvai pbsmjqwjoy cpfaulxgap</div>
   <div>ldnhdqrljl prbhmlnffa qrdtfeyssu crttkridig</div>
   <div>oselshyokd yexdfwvioo aoregtekkx</div>
+  <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
 </body>
 </html>
