add code in files types: ,.avsc,.py,.conf,.sh,.groovy,.xml,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sh,.py,.conf,.groovy,.xml,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -294,6 +294,6 @@
   <div>oselshyokd yexdfwvioo aoregtekkx</div>
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
-  <div>vwgeqxjpii pjnewfsfbr pxodxmhopc hqaohhnrmy bfxceskfnp</div>
+  <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
 </body>
 </html>
